--- a/views/partials/userProfile.ejs
+++ b/views/partials/userProfile.ejs
@@ -134,12 +134,10 @@
 
             <!-- Links -->
             <div class="flex-1 px-4 space-y-2 overflow-hidden hover:overflow-auto ">
-              
-
 <div class="w-full max-w-sm bg-white rounded-lg shadow dark:bg-violet-700 dark:border-gray-700">
   <div class="flex flex-col items-center pb-10">
       <img class="w-12 h-12 mb-3 mt-6   rounded-full shadow-lg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLMI5YxZE03Vnj-s-sth2_JxlPd30Zy7yEGg&usqp=CAU" alt="Bonnie image"/>
-      <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Bonnie Green</h5>
+      <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Syam</h5>
       <span class="text-sm text-gray-500 dark:text-gray-400">Visual Designer</span>
 
   </div>
