--- a/views/user/addressEdit.ejs
+++ b/views/user/addressEdit.ejs
@@ -80,7 +80,7 @@
            </div>
         <!-- } -->
     <div class="flex w-32 items-center justify-center gap-x-6 bg-red-500">
-      <button type="submit" class=" bg-ind border-gray-950o-600 px-3 py-2 text-sm font-semibold text-gray-100 shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add</button>
+      <button type="submit" class=" bg-ind border-gray-950o-600 px-3 py-2 text-sm font-semibold text-gray-100 shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Update</button>
     </div>
   </form>
   </section>
