--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -3,7 +3,6 @@
 
 <main>
 
-
 <section class="h-14 text-center mt-7 p-4">
     <span class="michroma-regular text-2xl ">YOUR CART</span>
     <p class="mt-5  border-b border-gray-950"></p>
@@ -39,31 +38,36 @@
                               
                                 <% const cartItem = items.cart.find(item => item.productId.toString() === product._id.toString()) %>
                                 <% if (cartItem) { %>
-                                    <img onclick="removeCart('<%= cartItem._id %>')" src="/images/x-letter.svg" class="h-4 w-4 ml-12" alt="Remove">
+                                    <img onclick="removeCart('<%= cartItem._id %>')" src="/images/x-letter.svg" class="h-6 w-6 ml-5 border-2 border-gray-950 rounded-full" alt="Remove">
                                 <% } %>
                                 
-                             <select id="quantitySelect" class="w-16 text-center ml-12 block appearance-none bg-transparent border border-gray-300 px-2 leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
+                           
                                 <% if (cartItem) { %>
-                                    <% for (let i = 1; i <= cartItem.quantity; i++) { %>
-                                        <option class="text-gray-950" value="2"> <%= i %> </option>
+                                    <% for (let i = 1; i <= 1; i++) { %>
+                                        <span class="text-gray-950 h-6 w-6 ml-44 border-2 border-gray-950 rounded-full font-bold" value="2"> <%= cartItem.quantity %> </span>
                                         <% } %>
                                 <% } else { %>
-                                    <option class="text-gray-950" value="0"> Out of stock </option>
+                                    <span class="text-gray-950" value="0"> Out of stock </span>
                                 <% } %>
                             </select>
                             </div>
                         </div>
                     </div>
                 <% }) %>
+
                 <section class="flex-row">
                     <% const cartItem = items.cart.find(item => item.productId.toString()); %>
-                    <% let totalQuantity = 0; %> 
-                    <% items.products.forEach(item => { %>
-                        <% totalQuantity += item.price; %> 
+                    <% let totalPrice = 0; %> 
+                    <% items.cart.forEach(cartItem => { %>
+                        <% const product = items.products.find(prod => prod._id.toString() === cartItem.productId.toString()); %>
+                        <% if (product) { %>
+                            <% totalPrice += product.price * cartItem.quantity; %>
+                        <% } %>
                     <% }); %>
-                    <span class="font-bold"> Total: <%= totalQuantity %> </span><br><br> 
-                    <a href="/checkout" class="m-20 cursor-pointer text-center w-48 h-8 rounded-full bg-transparent hover:bg-cyan-400 text-gray-700 font-semibold hover:text-white text-xs py-2 px-4 border border-gray-700 hover:border-transparent">
-                        Place order
+                    
+                    <span class="font-bold"> Total: <%= totalPrice %>  </span><br><br>  
+                    <a href="/checkout/<%= cartItem._id %>/<%= totalPrice %>" class="m-20 cursor-pointer text-center w-48 h-8 rounded-full bg-transparent hover:bg-cyan-400 text-gray-700 font-semibold hover:text-white text-xs py-2 px-4 border border-gray-700 hover:border-transparent">
+                        Checkout
                     </a>
                 </section>
                 
@@ -72,7 +76,6 @@
 </div>
 </main>
 <script>
-
 const removeCart = (itemId) => {
     const url = `http://localhost:4000/removeCart/${itemId}`;
     fetch(url, {
@@ -83,7 +86,6 @@ const removeCart = (itemId) => {
             throw new Error('Network response was not ok');
         }
         return response.json();
-        console.log("THE JSOn: ",response.json());
     })
     .then(data => {
         console.log("Item removed successfully:", data);
