--- a/views/user/addressAdd.ejs
+++ b/views/user/addressAdd.ejs
@@ -63,6 +63,12 @@
               <input type="text" name="pincode" id="pincode" autocomplete="pincode" class="block w-full  border border-gray-950 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
             </div>
           </div>
+          <div class="sm:col-span-2">
+            <label for="addressType" class="block text-sm font-medium leading-6 text-gray-900">Address Type</label>
+            <div class="mt-2">
+              <input type="text" name="addressType" id="addressType" autocomplete="addressType" class="block w-full  border border-gray-950 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
+          </div>
         </div>
       </div>
       </div>
