--- a/views/user/userAddress.ejs
+++ b/views/user/userAddress.ejs
@@ -40,7 +40,7 @@
                       </div>
                       <div class="px-4 py-6">
                           <dt class="text-sm font-medium leading-6 text-gray-900">Address Type</dt>
-                          <dd class="mt-1 text-sm leading-6 text-gray-700">Degfault</dd>
+                          <dd class="mt-1 text-sm leading-6 text-gray-700"><%= add.addressType %></dd>
                           <a href="/editAddress/<%= add.id %>" class="mt-1 text-sm leading-6 text-gray-700">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4">
                               <path d="m2.695 14.762-1.262 3.155a.5.5 0 0 0 .65.65l3.155-1.262a4 4 0 0 0 1.343-.886L17.5 5.501a2.121 2.121 0 0 0-3-3L3.58 13.419a4 4 0 0 0-.885 1.343Z" />
