--- a/views/partials/userProfile.ejs
+++ b/views/partials/userProfile.ejs
@@ -187,7 +187,7 @@
               </span>
               <span>My Address</span>
             </a>
-              <a href="#" class="flex items-center space-x-2 text-indigo-600 transition-colors rounded-lg group hover:bg-indigo-600 hover:text-white"
+              <a href="/orderHistory" class="flex items-center space-x-2 text-indigo-600 transition-colors rounded-lg group hover:bg-indigo-600 hover:text-white"
               >
                 <span
                   aria-hidden="true"
