--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -3,7 +3,105 @@
 <main>
 
 
-  <h1>Order Management</h1>
+
+  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <div class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white">
+        <div>
+            </button>
+            <!-- Dropdown menu -->
+            <div id="dropdownAction" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownActionButton">
+                    <li>
+                        <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reward</a>
+                    </li>
+                    <li>
+                        <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Promote</a>
+                    </li>
+                    <li>
+                        <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Activate account</a>
+                    </li>
+                </ul>
+                <div class="py-1">
+                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete User</a>
+                </div>
+            </div>
+        </div>
+   
+        <div class="relative">
+            <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
+                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                </svg>
+            </div>
+          </div>
+    </div>
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-blue-100  dark:text-gray-400">
+            <tr>
+                <th scope="col" class="p-4">
+                 
+                </th>
+                <th scope="col" class="px-6 3">Name</th>
+                <th scope="col" class="px-6 py-3">Total</th>
+                <th scope="col" class="px-6 py-3">Payment Method</th>
+                <th scope="col" class="px-6 py-3">Status</th>
+                <th scope="col" class="px-6 py-3">Create date</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% orders.forEach(order => { %>
+            <tr class="bg-white border-b  dark:border-gray-300 hover:bg-gray-50 ">
+                <td class="w-4 p-4">
+                    
+                </td>
+                <td class="px-6 py-4">
+                    <a  class="font-medium font-sans text-xs text-gray-950  hover:underline">USER
+                       
+                      </a>
+                </td>
+                <td class="px-6 py-4">
+                  <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.total %>
+                       
+                  </a>
+                </td>
+                <td class="px-6 py-4">
+                  <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.paymentMethod %>
+                       
+                  </a>
+                </td>
+     
+                <!-- <td class="px-6 py-4">
+                    <a href=".#" class="font-medium font-sans text-xs text-red-950  hover:underline">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3.5 h-3.5 text-red-600" >
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                      </svg>
+                      </a>
+                </td> -->
+                <td class="px-6 py-4">
+                  <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.status %>
+                       
+                  </a>
+                </td>
+                <td class="px-6 py-4">
+                  <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"> <%
+                    var createDate = new Date(order.createdate);
+                    var date = createDate.toLocaleDateString();
+                    var time = createDate.toLocaleTimeString();
+                    %>
+                    
+                    <p><%= date %> &nbsp;<%= time %></p>
+                    
+                  </a>
+                </td>
+     
+            </tr>
+            <% }) %>
+    
+
+        </tbody>
+    </table>
+
+</div>
   
 </main>
 <%- include('../partials/adminFooter') %>
