--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -5,11 +5,12 @@
  <!-- component -->
 <div class="py-14 px-4 md:px-6 2xl:px-20 2xl:container 2xl:mx-auto">
     <!--- more free and premium Tailwind CSS components at https://tailwinduikit.com/ --->
-  
+    <% order.forEach(item => { %>
     <div class="flex justify-start item-start space-y-2 flex-col">
-      <h1 class="text-3xl dark:text-gray-950 lg:text-4xl font-semibold leading-7 lg:leading-9 text-gray-800">Order #13432</h1>
-      <p class="text-base dark:text-gray-300 font-medium leading-6 text-gray-600">21st Mart 2021 at 10:34 PM</p>
+      <h1 class="text-1xl dark:text-gray-950 lg:text-1xl font-semibold leading-7 lg:leading-9 text-gray-800">order id: <%= item._id %></h1>
+      <p class="text-base dark:text-gray-300 font-medium leading-6 text-gray-600"><%= item.createdate %></p>
     </div>
+   
     <div class="mt-10 flex flex-col xl:flex-row jusitfy-center items-stretch w-full xl:space-x-8 space-y-4 md:space-y-6 xl:space-y-0">
       <div class="flex flex-col justify-start items-start w-full space-y-4 md:space-y-6 xl:space-y-8">
         <div class="flex flex-col justify-start items-start dark:bg-gray-300 bg-gray-50 px-4 py-4 md:py-6 md:p-6 xl:p-8 w-full">
@@ -56,9 +57,11 @@
             </div>
             <div class="flex justify-between items-center w-full">
               <p class="text-base dark:text-gray-950 font-semibold leading-4 text-gray-800">Total</p>
-              <p class="text-base dark:text-gray-800 font-semibold leading-4 text-gray-600">36.00₹</p>
+              <p class="text-base dark:text-gray-800 font-semibold leading-4 text-gray-600"><%= item.total %>₹</p>
             </div>
           </div>
+
+
           <div class="flex flex-col justify-center px-4 py-6 md:p-6 xl:p-8 w-full bg-gray-50 dark:bg-gray-300 space-y-6">
             <h3 class="text-xl dark:text-gray-950 font-semibold leading-5 text-gray-800">Shipping</h3>
             <div class="flex justify-between items-start w-full">
@@ -67,15 +70,17 @@
                   <img class="w-full h-full" alt="logo" src="https://i.ibb.co/L8KSdNQ/image-3.png" />
                 </div>
                 <div class="flex flex-col justify-start items-center">
-                  <p class="text-lg leading-6 dark:text-gray-950 font-semibold text-gray-800">DPD Delivery<br /><span class="font-normal">Delivery with 24 Hours</span></p>
+                  <p class="text-lg leading-6 dark:text-gray-950 font-semibold text-gray-800"><%= item.paymentMethod %><br /><span class="font-normal">Delivery with 24 Hours</span></p>
                 </div>
               </div>
             
             </div>
             <div class="w-full flex justify-center items-center">
-              <button class="hover:bg-black dark:bg-white dark:text-gray-800 dark:hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 py-2 w-96 h-10 md:w-full bg-gray-800 text-base font-medium leading-4 text-white">Status</button>
+              <button class="hover:bg-black dark:bg-white dark:text-gray-800 dark:hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 py-2 w-96 h-10 md:w-full bg-gray-800 text-base font-medium leading-4 text-white"><%= item.status %></button>
             </div>
           </div>
+
+
         </div>
 
         
@@ -108,16 +113,17 @@
               </div>
               <div class="flex justify-center md:justify-start items-center md:items-start flex-col space-y-4">
                 <p class="text-base dark:text-gray-950 font-semibold leading-4 text-center md:text-left text-gray-800">Order id</p>
-                <p class="w-48 lg:w-full dark:text-gray-950 xl:w-48 text-center md:text-left text-sm leading-5 text-gray-600">438928143jsadkf</p>
+                <p class="w-48 lg:w-full dark:text-gray-950 xl:w-48 text-center md:text-left text-sm leading-5 text-gray-600"><%= item.createdate %></p>
               </div>
             </div>
             <div class="flex w-full justify-center items-center md:justify-start md:items-start">
-              <button class="mt-6 md:mt-0 dark:border-white dark:hover:bg-gray-900 dark:bg-transparent dark:text-gray-950 py-5 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 border border-gray-800 font-medium w-96 2xl:w-full text-base font-medium leading-4 text-gray-800">Edit Details</button>
+              <button class="mt-6 md:mt-0 dark:border-white dark:hover:bg-gray-900 dark:bg-transparent dark:text-gray-950 py-5 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 border border-gray-800 font-medium w-96 2xl:w-full text-base leading-4 text-gray-800">Edit Details</button>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <% }) %>
   </div>
     
 
