--- a/views/admin/product-add.ejs
+++ b/views/admin/product-add.ejs
@@ -14,32 +14,19 @@
               <div class="sm:col-span-3">
                 <label for="productImage" mltple class="block text-sm font-medium leading-6 text-gray-900">Prouduct Image</label>
                 <div class="mt-2">
-                  <input type="file" name="productImage" id="productImage" accept="image/*" muliple autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" >
+                  <input type="file" name="productImage" accept="image/*" multiple required class=" w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" >
                 </div>
               </div> 
-
-              <!-- <div class="sm:col-span-3">
-                <label for="productImage" class="block text-sm font-medium text-gray-700">Product Images</label>
-                <input type="file" id="productImage" name="productImage" accept="image/*" multiple class="mt-1 border-2 border-gray-700 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm">
-            </div>
-            <div> -->
-                
-              <!-- //catergory form for later -->
       
               <div class="sm:col-span-3">
-             
                 <label for="category" class="block text-sm font-medium leading-6 text-gray-900">Category</label>
-               
                 <div class="mt-2">
-                    
                   <select id="category" name="category" autocomplete="category-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
                   <% categories.forEach(category => { %>
                     <option class="text-gray-900"><%= category.categoryName %></option>
-                 
                     <% }) %>
                   </select>
                 </div>
-               
               </div>
 
       
