--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -65,7 +65,7 @@
                 <% chart[0].forEach((product) => { %>
                 <div class="group relative">
                     <div class="group-hover:scale-110 transition-all duration-300  aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="/product_images/<%= product.productImage %>">
+                        <img src="/product_images/<%= product.productImage[0] %>">
                     </div>
 
 
