--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -6,9 +6,9 @@
 <div class="py-14 px-4 md:px-6 2xl:px-20 2xl:container 2xl:mx-auto">
     <!--- more free and premium Tailwind CSS components at https://tailwinduikit.com/ --->
     <% order.forEach(item => { %>
-    <div class="flex justify-start item-start space-y-2 flex-col">
-      <h1 class="text-1xl dark:text-gray-950 lg:text-1xl font-semibold leading-7 lg:leading-9 text-gray-800">order id: <%= item._id %></h1>
-      <p class="text-base dark:text-gray-300 font-medium leading-6 text-gray-600"><%= item.createdate %></p>
+    <div class="flex justify-start item-start space-y-2 flex-col  pt-12">
+      <h1 class="text-1xl dark:text-gray-950 lg:text-1xl font-semibold leading-7 lg:leading-9 text-green-200">Order id: <%= item._id %></h1>
+      <p class="text-base dark:text-red-500 font-medium leading-6 text-gray-600"><%= item.createdate %></p>
     </div>
    
     <div class="mt-10 flex flex-col xl:flex-row jusitfy-center items-stretch w-full xl:space-x-8 space-y-4 md:space-y-6 xl:space-y-0">
@@ -44,7 +44,7 @@
             <div class="flex justify-center items-center w-full space-y-4 flex-col border-gray-200 border-b pb-4">
               <div class="flex justify-between w-full">
                 <p class="text-base dark:text-gray-950 leading-4 text-gray-800">Subtotal</p>
-                <p class="text-base dark:text-gray-800 leading-4 text-gray-600">56.00₹</p>
+                <p class="text-base dark:text-gray-800 leading-4 text-gray-600"><%= item.total %>₹</p>
               </div>
               <div class="flex justify-between items-center w-full">
                 <p class="text-base dark:text-gray-950 leading-4 text-gray-800">Discount </p>
@@ -52,7 +52,7 @@
               </div>
               <div class="flex justify-between items-center w-full">
                 <p class="text-base dark:text-gray-950 leading-4 text-gray-800">Shipping</p>
-                <p class="text-base dark:text-gray-800 leading-4 text-gray-600">8.00₹</p>
+                <p class="text-base dark:text-gray-800 leading-4 text-gray-600">0.00₹</p>
               </div>
             </div>
             <div class="flex justify-between items-center w-full">
@@ -108,17 +108,19 @@
           <div class="flex justify-between xl:h-full items-stretch w-full flex-col mt-6 md:mt-0">
             <div class="flex justify-center md:justify-start xl:flex-col flex-col md:space-x-6 lg:space-x-8 xl:space-x-0 space-y-4 xl:space-y-12 md:space-y-0 md:flex-row items-center md:items-start">
               <div class="flex justify-center md:justify-start items-center md:items-start flex-col space-y-4 xl:mt-8">
-                <p class="text-base dark:text-gray-950 font-semibold leading-4 text-center md:text-left text-gray-800">Shipping Address</p>
-                <p class="w-48 lg:w-full dark:text-gray-950 xl:w-48 text-center md:text-left text-sm leading-5 text-gray-600">180 North King Street, Northhampton MA 1060</p>
+                <p class="text-base dark:text-gray-950 font-semibold leading-4 text-center md:text-left text-gray-800">Shipping Address:</p>
+                <p class="w-48 lg:w-full dark:text-gray-950 xl:w-48 text-center md:text-left text-sm leading-5 text-gray-600"><%= address.address %>, <%= address.pincode %>, <%= address.city %>, <%= address.state %>, <%= address.country %></p>
               </div>
               <div class="flex justify-center md:justify-start items-center md:items-start flex-col space-y-4">
-                <p class="text-base dark:text-gray-950 font-semibold leading-4 text-center md:text-left text-gray-800">Order id</p>
+                <p class="text-base dark:text-gray-950 font-semibold leading-4 text-center md:text-left text-gray-800">Order id :
+                   <span class="font-light"><%= item._id %>
+                  </span>
+                  </p>
+                
                 <p class="w-48 lg:w-full dark:text-gray-950 xl:w-48 text-center md:text-left text-sm leading-5 text-gray-600"><%= item.createdate %></p>
               </div>
             </div>
-            <div class="flex w-full justify-center items-center md:justify-start md:items-start">
-              <button class="mt-6 md:mt-0 dark:border-white dark:hover:bg-gray-900 dark:bg-transparent dark:text-gray-950 py-5 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 border border-gray-800 font-medium w-96 2xl:w-full text-base leading-4 text-gray-800">Edit Details</button>
-            </div>
+       
           </div>
         </div>
       </div>
