--- a/views/user/product.ejs
+++ b/views/user/product.ejs
@@ -27,21 +27,21 @@
               <div class="lg:flex lg:items-start">
                 <div class="lg:order-2 lg:ml-5">
                   <div class="max-w-xl overflow-hidden rounded-lg">
-                    <img class="h-full w-full max-w-full object-cover" src="/product_images/<%- datas[0].productImage %>" alt="big" />
+                    <img class="h-full w-full max-w-full object-cover" src="/product_images/<%- datas[0].productImage[0] %>" alt="big" />
                   </div>
                 </div>
       
                 <div class="mt-2 w-full lg:order-1 lg:w-32 lg:flex-shrink-0">
                   <div class="flex flex-row items-start lg:flex-col">
                     <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-gray-900 text-center">
-                      <img class="h-full w-full object-cover" src="/product_images/<%- datas[0].productImage %>" alt="" />
-                    </button>
-                    <!-- <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-transparent text-center">
-                      <img class="h-full w-full object-cover" src="/images/JHxMnVrtPMdcNU1s_7g7f.png" alt="" />
+                      <img class="h-full w-full object-cover" src="/product_images/<%- datas[0].productImage[0] %>" alt="" />
                     </button>
                     <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-transparent text-center">
-                      <img class="h-full w-full object-cover" src="/images/JHxMnVrtPMdcNU1s_7g7f.png" alt="" />
-                    </button> -->
+                      <img class="h-full w-full object-cover" src="/product_images/<%- datas[0].productImage[1] %>" alt="" />
+                    </button>
+                    <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-transparent text-center">
+                      <img class="h-full w-full object-cover" src="/product_images/<%- datas[0].productImage[2] %>" alt="" />
+                    </button>
                   </div>
                 </div>
               </div>
