--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -15,7 +15,7 @@
 
                   <div class="grid sm:grid-cols-2 items-start gap-6">
                     <div class="  shrink-0 bg-gray-50 ">
-                      <img src='/product_images/<%= item.productImage %>' class="w-full object-contain" />
+                      <img src='/product_images/<%= item.productImage[0] %>' class="w-full object-contain" />
                     </div>
                     <div>
                       <h3 class="text-base text-white"><%= item.productName %></h3>
