--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -108,7 +108,7 @@
           <div class="flex justify-between xl:h-full items-stretch w-full flex-col mt-6 md:mt-0">
             <div class="flex justify-center md:justify-start xl:flex-col flex-col md:space-x-6 lg:space-x-8 xl:space-x-0 space-y-4 xl:space-y-12 md:space-y-0 md:flex-row items-center md:items-start">
               <div class="flex justify-center md:justify-start items-center md:items-start flex-col space-y-4 xl:mt-8">
-                <p class="text-base dark:text-gray-950 font-semibold leading-4 text-center md:text-left text-gray-800">Shipping Address:</p>
+                <p class="text-base dark:text-gray-950 font-semibold leading-4 text-center md:text-left text-gray-800">Shipping Address</p>
                 <p class="w-48 lg:w-full dark:text-gray-950 xl:w-48 text-center md:text-left text-sm leading-5 text-gray-600"><%= address.address %>, <%= address.pincode %>, <%= address.city %>, <%= address.state %>, <%= address.country %></p>
               </div>
               <div class="flex justify-center md:justify-start items-center md:items-start flex-col space-y-4">
