--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -35,13 +35,19 @@
                     <td class="px-4 md:px-6 py-4">
                         <a href="#" class="font-medium font-sans text-gray-950 hover:underline"><%= product.price %></a>
                     </td>
-                    <td class="px-4 md:px-6 py-4">
-                        <a href="./product-delete/<%= product._id %>" class="font-medium font-sans text-gray-950 hover:underline">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3 text-red-600">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                            </svg>
-                        </a>
-                    </td>
+
+
+                    <td class="px-6 py-4">
+                        <a href="./product-block/<%= product._id %>" class="font-medium text-red-950  hover:underline">
+                            <% if (product.deleted == false) { %>
+                               <span class="text-green-600">Block</span>
+                            <% } else { %>
+                                <span class="text-red-600">Unblock</span>
+                            <% } %>    
+                        </td>
+         
+
+
                     <td class="px-4 md:px-6 py-4">
                         <a href="./product-edit/<%= product._id %>" class="font-medium font-sans text-gray-950 hover:underline">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
