new arrivals added

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -16,7 +16,7 @@
                 <!-- First Product -->
                 <% items.products.forEach(product => { %>
                     <div class="">
-                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-transparent lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img src="./product_images/<%= product.productImage[0] %>">
                         </div>
                                     
