--- a/views/admin/product-edit.ejs
+++ b/views/admin/product-edit.ejs
@@ -83,6 +83,12 @@
                   <input value="<%= products[0].stock %>"  id="stock" name="stock" type="number" autocomplete="stock" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
               </div>
+              <div class="sm:col-span-4">
+                <label for="extras" class="block text-sm font-medium leading-6 text-gray-900">Extras</label>
+                <div class="mt-2">
+                  <input value="<%= products[0].extras %>"  id="extras" name="extras" type="text" autocomplete="extras" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
 
         </div>
       
