--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -7,7 +7,7 @@
                     <div class="flex justify-between mb-6">
                         <div>
                             <div class="flex items-center mb-1">
-                                <div class="text-2xl font-semibold"><%= chart[0] %></div>
+                                <div class="text-2xl font-semibold"><%=  %></div>
                             </div>
                             <div class="text-sm font-medium text-gray-400">Users</div>
                         </div>
