--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -65,36 +65,19 @@
                   </a>
                 </td>
                 <td class="px-6 py-4">
-                  <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.paymentMethod %>
-                       
+                  <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.paymentMethod %>   
                   </a>
                 </td>
-     
-                <td class="px-6 py-4">
-                  <div class="relative">
-                    <div class="relative">
-                        <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-gray-950 h-7 w-44 bg-gray-50  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
-                            <span class="flex items-center font-thin">Sort items</span>
-                            <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
-                        </button>
-                        
-                        <!-- Dropdown menu -->
-                        <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-100 text-gray-950">
-                            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
-                                <li>
-                                    <a href="#" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Shipped</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Cancel</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Option 3</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <td class="px-6 py-4 flex gap-3">
+                    <span><%= order.status %></span>
+
+                        <a href="./orderStatus/<%= order.id %>" class="font-medium font-sans text-xs text-red-950  hover:underline">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
+                              </svg>
+                          </a>
                 </td>
+     
                 <td class="px-6 py-4">
                   <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"> <%
                     var createDate = new Date(order.createdate);
