--- a/views/user/product.ejs
+++ b/views/user/product.ejs
@@ -2,7 +2,6 @@
 
 
 <main class="justify-center">
-    <!-- product -->
     <section class="py-12 sm:py-16 p-32"> 
         <div class="container mx-auto px-4">
           <nav class="flex">
@@ -16,19 +15,20 @@
                 <div class="flex items-center">
                   <span class="mx-2 text-gray-400">/</span>
                   <div class="-m-1">
-                    <a href="#" class="rounded-md p-1 text-sm font-medium text-gray-600 focus:text-gray-900 focus:shadow hover:text-gray-800" aria-current="page"> Rolex </a>
+                    <a href="#" class="rounded-md p-1 text-sm font-medium text-gray-600 focus:text-gray-900 focus:shadow hover:text-gray-800" aria-current="page"> product </a>
                   </div>
                 </div>
               </li>
             </ol>
           </nav>
       
+  <!------------ products -------------->
           <div class="lg:col-gap-12 xl:col-gap-16 mt-8 grid grid-cols-1 gap-12 lg:mt-12 lg:grid-cols-5 lg:gap-16">
             <div class="lg:col-span-3 lg:row-end-1">
               <div class="lg:flex lg:items-start">
                 <div class="lg:order-2 lg:ml-5">
-                  <div class="max-w-xl overflow-hidden rounded-lg">
-                    <img class="h-full w-full max-w-full object-cover" src="/product_images/<%- datas[0].productImage[0] %>" alt="big" />
+                  <div id="container" class="max-w-xl overflow-hidden rounded-lg">
+                    <img id="img-container" class="h-full w-full max-w-full object-cover" src="/product_images/<%- datas[0].productImage[0] %>" alt="big" />
                   </div>
                 </div>
       
@@ -68,6 +68,7 @@
                     <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" class=""></path>
                   </svg>
                 </div>
+  <!------------ reviews -------------->
                 <p class="ml-2 text-sm font-medium text-gray-500">1,209 Reviews</p>
               </div>
       
@@ -141,14 +142,13 @@
       </section>
 
    <script>
-      //to wishlist page
+      //<------------ to wishlist page -------------->
       const toWishlist = () => {
         const data = {
             productId: productId,
             userId: userId
         };
 
-        // Send data to server using AJAX
         fetch('/addToWishlist'), {
             method: 'POST',
             headers: {
@@ -164,7 +164,7 @@
         })
     }
 
-     //to cart page
+      //<------------ to cart page -------------->
 const toCart = (productId, userId, quantity) => {
     const data = {
         productId: productId,
@@ -172,7 +172,6 @@ const toCart = (productId, userId, quantity) => {
         quantity: parseInt(quantity)
     };
 
-    // Send data to server using AJAX
     fetch('/addTocart', {
         method: 'POST',
         headers: {
@@ -202,6 +201,25 @@ const addToCartWithQuantity = (productId, userId) => {
         console.log('Invalid quantity selected');
     }
 };
+
+
+//<------------ image zoom script -------------->
+const container = document.getElementById("container");
+const img = document.getElementById("img-container");
+
+container.addEventListener('mousemove', (e) => {
+  const x = e.clientX - e.target.offsetLeft;
+  const y = e.clientY - e.target.offsetTop;
+  img.style.transition = 'transform 0.2s';
+  img.style.transformOrigin = `${x}px ${y}px`;
+  img.style.transform = "scale(2)";
+});
+
+container.addEventListener('mouseleave', () => {
+  img.style.transition = 'transform 0.2s';
+  img.style.transformOrigin = "center";
+  img.style.transform = "scale(1)";
+});
 
 </script>      
 
