--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -29,6 +29,7 @@
   </script>
 <% } %>
 
+<main>
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <!-- Logo if wanted -->
@@ -38,7 +39,7 @@
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
   </div>
 
-  <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm bg-slate-200">
+  <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-200 shadow-xl">
     <form class="space-y-6" method="post">
       <div>
         <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email</label>
@@ -59,7 +60,7 @@
      
       <div class="flex">
         <button type="submit" class="flex w-24 justify-center bg-cyan-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-lime-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Sign in</button>
-        <a href="/home" class="text-xs italic pl-5 font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
+        <a href="/forgotPassword" class="text-xs italic pl-5 font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
       </div>
       <!-- googel authentication -->
       <!-- <div class="flex">
