--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -5,6 +5,29 @@
  <!-- component -->
 <div class="py-14 px-4 md:px-6 2xl:px-20 2xl:container 2xl:mx-auto">
 
+
+
+  <div class="flex flex-col justify-start items-start flex-shrink-0">
+    <div class="flex justify-center w-full md:justify-start items-center space-x-4 py-8 border-b border-gray-200">
+      <img src="https://c8.alamy.com/comp/TAMY4K/person-gray-photo-placeholder-man-in-a-costume-on-white-background-TAMY4K.jpg" class="w-12 h-12 rounded-full" alt="avatar" />
+      <div class="flex justify-start items-start flex-col space-y-2">
+        <p class="text-base dark:text-gray-950 font-semibold leading-4 text-left text-gray-800"> <%= user.name %> </p>
+        <p class="text-sm dark:text-gray-300 leading-5 text-gray-600">10 Orders</p>
+      </div>
+    </div>
+    <div class="flex flex-col md:flex-row xl:flex-col justify-start items-stretch h-full w-full md:space-x-6 lg:space-x-8 xl:space-x-0">
+       
+
+      <div class="flex justify-center text-gray-800 dark:text-gray-950 md:justify-start items-center space-x-4 py-4 border-b border-gray-200 w-full">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" style="color: rgb(0, 234, 255);" xmlns="http://www.w3.org/2000/svg">
+          <path d="M19 5H5C3.89543 5 3 5.89543 3 7V17C3 18.1046 3.89543 19 5 19H19C20.1046 19 21 18.1046 21 17V7C21 5.89543 20.1046 5 19 5Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
+          <path d="M3 7L12 13L21 7" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+        <p class="cursor-pointer text-sm leading-5 text-sky-500"> <%= user.email %> </p>
+      </div>
+    </div>
+
+
   <% orders.forEach(order => { %>
   
     <div class="flex justify-start item-start space-y-2 flex-col  pt-12">
@@ -17,10 +40,10 @@
      
       
         <div class="flex flex-col justify-start items-start w-full space-y-4 md:space-y-6 xl:space-y-8">
-          <div class="flex flex-col justify-start items-start dark:bg-slate-200 bg-gray-50 px-4 py-4 md:p-6 xl:p-8 w-full">
+          <div class="flex flex-col justify-start items-start  bg-gray-50 px-4 py-4 md:p-6 xl:p-8 w-full  border border-gray-400">
             <p class="text-lg md:text-xl dark:text-gray-950 font-semibold leading-6 xl:leading-5 text-gray-800">Customer’s Cart</p>
             <% order.products.forEach(product => { %>
-            <div class="mt-4 md:mt-6 flex flex-col md:flex-row justify-start items-start md:items-center md:space-x-6 xl:space-x-8 w-full">
+            <div class="mt-4 md:mt-6 flex flex-col md:flex-row justify-start items-start md:items-center md:space-x-6 xl:space-x-8 w-full dark:bg-gray-300 p-2">
               <div class="pb-4 md:pb-8 w-full md:w-40">
                 <img class="w-full hidden md:block" src="/product_images/<%= product.productImage[0] %>" alt="dress" />
                
@@ -94,25 +117,10 @@
 
     <!-- Customer Component -->
     <div class="bg-gray-50 dark:bg-slate-200 w-full xl:w-96 flex justify-between items-center md:items-start px-4 my-12 md:p-6 xl:p-8 flex-col">
-      <h3 class="text-xl dark:text-gray-950 font-semibold leading-5 text-gray-800">Customer</h3>
-      <div class="flex flex-col md:flex-row xl:flex-col justify-start items-stretch h-full w-full md:space-x-6 lg:space-x-8 xl:space-x-0">
-        <div class="flex flex-col justify-start items-start flex-shrink-0">
-          <div class="flex justify-center w-full md:justify-start items-center space-x-4 py-8 border-b border-gray-200">
-            <img src="https://c8.alamy.com/comp/TAMY4K/person-gray-photo-placeholder-man-in-a-costume-on-white-background-TAMY4K.jpg" class="w-12 h-12 rounded-full" alt="avatar" />
-            <div class="flex justify-start items-start flex-col space-y-2">
-              <p class="text-base dark:text-gray-950 font-semibold leading-4 text-left text-gray-800">David Kent</p>
-              <p class="text-sm dark:text-gray-300 leading-5 text-gray-600">10 Previous Orders</p>
-            </div>
-          </div>
+     
+ 
 
-          <div class="flex justify-center text-gray-800 dark:text-gray-950 md:justify-start items-center space-x-4 py-4 border-b border-gray-200 w-full">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M19 5H5C3.89543 5 3 5.89543 3 7V17C3 18.1046 3.89543 19 5 19H19C20.1046 19 21 18.1046 21 17V7C21 5.89543 20.1046 5 19 5Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-              <path d="M3 7L12 13L21 7" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            <p class="cursor-pointer text-sm leading-5 ">david89@gmail.com</p>
-          </div>
-        </div>
+
         <div class="flex justify-between xl:h-full items-stretch w-full flex-col mt-6 md:mt-0">
           <div class="flex justify-center md:justify-start xl:flex-col flex-col md:space-x-6 lg:space-x-8 xl:space-x-0 space-y-4 xl:space-y-12 md:space-y-0 md:flex-row items-center md:items-start">
             <div class="flex justify-center md:justify-start items-center md:items-start flex-col space-y-4 xl:mt-8">
