--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -29,7 +29,7 @@
 <div id="errossr"></div>
 
 
-  <div class="px-16 py-10 mt-5 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-200 ">
+  <div class="px-16 py-10 mt-5 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-200 shadow-xl">
     <form id="form" class="space-y-6" method="post" action="/signup" >
 
       <div>
